--- a/boxfoodology/resources/application.properties
+++ b/boxfoodology/resources/application.properties
@@ -1,7 +1,7 @@
 product.version = 1.0.0
 
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql:///thera?characterEncoding=utf-8
+db.url=jdbc:mysql:///boxfoodology?characterEncoding=utf-8
 db.username=root
 db.password=
 
@@ -12,6 +12,6 @@ mail.smtp.starttls.enable=true
 mail.user=project.therans@gmail.com
 mail.password=therathera
 mail.address=project.therans@gmail.com
-mail.personal=TheraProject
+mail.personal=Boxfoodology
 
 base.url=http://localhost:8080/boxfoodology/
