Marquee text added.

--- a/boxfoodology/resources/application.properties
+++ b/boxfoodology/resources/application.properties
@@ -15,3 +15,4 @@ mail.address=project.therans@gmail.com
 mail.personal=Boxfoodology
 
 base.url=http://localhost:8080/boxfoodology/
+#base.url=http://testoroz.pagekite.me/boxfoodology/
