Location page, quantity, underconstruction page.

--- a/boxfoodology/resources/application.properties
+++ b/boxfoodology/resources/application.properties
@@ -15,4 +15,5 @@ mail.address=project.therans@gmail.com
 mail.personal=Boxfoodology
 
 base.url=http://localhost:8080/boxfoodology/
-#base.url=http://testoroz.pagekite.me/boxfoodology/
+#base.url=http://9f3319c0.ngrok.io/boxfoodology/
+#ngrok http 8080
