Kitchen mail added.

--- a/boxfoodology/resources/application.properties
+++ b/boxfoodology/resources/application.properties
@@ -9,11 +9,11 @@ mail.smtp.host=smtp.gmail.com
 mail.smtp.port=587
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
-mail.user=project.therans@gmail.com
-mail.password=therathera
-mail.address=project.therans@gmail.com
+mail.user=boxfoodologydubai@gmail.com
+mail.password=dubaiboxfoodology1
+mail.address=boxfoodologydubai@gmail.com
 mail.personal=Boxfoodology
 
 base.url=http://localhost:8080/boxfoodology/
-#base.url=http://9f3319c0.ngrok.io/boxfoodology/
+#base.url=http://ef5eba6e.ngrok.io/boxfoodology/
 #ngrok http 8080
