--- a/boxfoodology/ivy.xml
+++ b/boxfoodology/ivy.xml
@@ -44,5 +44,9 @@
 		
 		<!-- Jettison -->
 		<dependency org="org.codehaus.jettison" name="jettison" rev="1.3.7"/>
+		
+		<!-- Logging -->
+		<dependency org="log4j" name="log4j" rev="1.2.17" />
+		
     </dependencies>
 </ivy-module>
